# simulation-environment

./: LICENSE  README.md
mars_terrain_description/: CMakeLists.txt  package.xml
mars_terrain_description/launch/: mars_world.launch
mars_terrain_description/models/boulder_1/: boulder_1.sdf
mars_terrain_description/models/boulder_2/: boulder_2.sdf
mars_terrain_description/models/martian_path/: model.config  model.sdf
mars_terrain_description/models/martian_path/meshes/: mars_path2.stl  mars_path_simpler.dae  mars_path_simpler2.dae  untitled.blend
mars_terrain_description/worlds/: mars_terrain.world
moon_terrain_description/worlds/: moon_terrain.world
moontamer/four_wheel_steering_control/: CMakeLists.txt
moontamer/four_wheel_steering_controller/test/launch/: view_four_wheel_steering.launch
moontamer/four_wheel_steering_description/launch/: description.launch
moontamer/four_wheel_steering_description/urdf/: chassis.xacro  wheel_steered.xacro
moontamer/four_wheel_steering_gazebo/: package.xml
moontamer/four_wheel_steering_gazebo/launch/: empty_world.launch  spawn.launch
moontamer/four_wheel_steering_teleop/: package.xml
moontamer/four_wheel_steering_teleop/launch/: teleop4w.launch
moontamer/moontamer_bringup/: CMakeLists.txt  package.xml
moontamer/moontamer_bringup/launch/: bringup.launch  octomap_mapping.launch
moontamer/moontamer_bringup/launch/camera_config/: camera.launch  camera_ifm.launch
moontamer/moontamer_bringup/launch/imu_config/: imu.launch
moontamer/moontamer_bringup/launch/laser_config/: velodyne.launch
moontamer/moontamer_bringup/launch/navsat_config/: navsat.launch
moontamer/moontamer_description/: CMakeLists.txt  package.xml
moontamer/moontamer_description/launch/: display.launch
moontamer/moontamer_description/meshes/: chassis.dae  wheel.dae  wheel_steered.dae
moontamer/moontamer_description/urdf/: moontamer.urdf.xacro
moontamer/moontamer_gazebo/: CMakeLists.txt  package.xml
moontamer/moontamer_gazebo/launch/: empty_world.launch  spawn_moontamer.launch
pathfinder/: .gitignore  README.md
pathfinder/core_navigation/config/: parameters.yaml
pathfinder/core_navigation/include/core_navigation/: CoreNav.h
pathfinder/core_navigation/matlab/: GP.m  MAINRun2.m  MainRunInit2.m  UTfun.m  dataSync.m  figGen.m  figureGeneration.m  odomCovUpt.m  odomCut.m  odomUptCov.m  odomUptCov2.m  slip.m  slipCalculation.m
pathfinder/core_navigation/src/: CoreNav.cpp
pathfinder/geometry_utils/: CMakeLists.txt  package.xml
pathfinder/hw_interface/: CMakeLists.txt  CMakeLists.txt.user.1a57cfb  package.xml
pathfinder/hw_interface/include/hw_interface/: base_UDP_interface.hpp  base_interface.hpp  base_serial_interface.hpp  bit_utils.h  hw_interface.hpp  shared_const_buffer.hpp  telemetry.hpp
pathfinder/hw_interface/launch/: hw_interface.launch  hw_interface_plugins.launch
pathfinder/hw_interface/src/: base_UDP_interface.cpp  base_interface.cpp  base_serial_interface.cpp  hw_interface.cpp  hw_interface_node.cpp
pathfinder/hw_interface_plugins/hw_interface_plugin_adis_imu/: CMakeLists.txt  adis_imu_plugin.xml  package.xml  readme.md
pathfinder/hw_interface_plugins/hw_interface_plugin_adis_imu/launch/: Adis_Imu_Serial_Interface.launch
pathfinder/init_core_navigation/src/: InitCoreNav.cpp
pathfinder/pathfinder_control/src/: drive_straight_with_stop.cpp  pathfinder_control_node.cpp
pathfinder/pathfinder_description/: CMakeLists.txt  package.xml
pathfinder/pathfinder_description/config/: joint_names_pathfinder_description.yaml  model.config
pathfinder/pathfinder_description/launch/: display.launch  display_simple.launch  dummy.launch  gazebo.launch  gazebo_simple.launch
pathfinder/pathfinder_description/meshes/: base_link.dae  base_link2.dae  base_link_centered.dae  diff_bar_link.dae  diff_rod_bottom.dae  diff_rod_link.dae  diff_rod_upper.dae  left_rocker.dae  left_rocker_centered.dae  left_rocker_centered2.dae  right_rocker.dae  right_rocker_centered.dae  right_rocker_centered2.dae  wheel.dae
pathfinder/pathfinder_description/rviz/: pathfinder.rviz  pathfinder_simple.rviz
pathfinder/pathfinder_description/sdf/: model.sdf
pathfinder/pathfinder_description/urdf/: dummy.urdf  macro.xacro  macro_base.xacro  materials.xacro  pathfinder_description.urdf.xacro  pathfinder_simple_description.urdf.xacro  skid_steer.gazebo
pathfinder/pathfinder_launch/: CMakeLists.txt  package.xml
pathfinder/pathfinder_launch/launch/: cn_debug.launch  drive.launch  novatel.launch  pathfinder_debug_launch.launch  pathfinder_gps_launch.launch  pathfinder_init_launch.launch  pathfinder_launch.launch  pathfinder_no_webcam_launch.launch  realsense.launch  webcams.launch
pathfinder/pathfinder_localization/: CMakeLists.txt  package.xml
pathfinder/pathfinder_localization/config/: pathfinder_dead_reckoning.yaml
pathfinder/pathfinder_localization/launch/: pathfinder_dead_reckoning.launch
pathfinder/pathfinder_localization/src/: dead_reckoning_node.cpp
pathfinder/pathfinder_navigation/: CMakeLists.txt  package.xml
pathfinder/pathfinder_navigation/config/: costmap_common.yaml  costmap_global_laser.yaml  costmap_local.yaml
pathfinder/pathfinder_navigation/launch/: move_base.launch
pathfinder/realsense_gazebo_plugin/: CMakeLists.txt
pathfinder/realsense_gazebo_plugin/launch/: depth_proc.launch
pathfinder/realsense_gazebo_plugin/src/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
pathfinder/realsense_gazebo_plugin/urdf/: realsense-RS200.macro.xacro
(+23 files in other folders)
