<package>
  <name>pathfinder_description</name>
  <version>2.0.0</version>
  <description>
    <p>URDF Description package for pathfinder_description</p>
    <p>This package contains configuration data, 3D models and launch files
for pathfinder_description robot</p>
  </description>
  <maintainer email="cakilic@mix.wvu.edu">WVU NavLab</maintainer>
  <author>Cagri Kilic/cakilic@mix.wvu.edu</author>
  <url>https://github.com/wvu-irl/fast-traverse-pathfinder</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>


  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>


  <export>
    <architecture_independent />
  </export>
</package>
